<resources>
    <string name="app_name">TipCalculatorF21</string>
    <string name="bill_amount">Bill Amount</string>

    <!-- These are the values to display -->
    <!-- entries -->
    <string-array name="rounding_text">
        <item>No rounding</item>
        <item>Round tip</item>
        <item>Round total</item>
    </string-array>


    <string name="no_rounding">No Rounding</string>
    <string name="round_tip">Round Tip</string>
    <string name="round_total">Round Total</string>
    <!-- we can't access the string-array items, so it's easier to define them separately -->
    <string-array name="rounding_options">
        <item>@string/no_rounding</item>
        <item>@string/round_tip</item>
        <item>@string/round_total</item>
    </string-array>

    <!-- rounding indexes -->
    <string name="no_rounding_i" translatable="false">0</string>
    <string name="round_tip_i" translatable="false">1</string>
    <string name="round_total_i" translatable="false">2</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="number_of_people">Number of People</string>
    <string name="_1_person">1 Person</string>
    <string name="_2_people">2 People</string>
    <string name="_3_people">3 People</string>
    <string name="_4_people">4 People</string>
    <string name="net_amount">Net Amount</string>
    <string name="total_per_person">Total per Person</string>
    <string-array name="rounding_indexes">
        <item>@string/no_rounding_i</item>
        <item>@string/round_tip_i</item>
        <item>@string/round_total_i</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>